# selfvm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.js  log.txt  package-lock.json  package.json  self-vm.d.ts  self-vm.js  test.js
src/: addon.cpp  platform_delegate.h
src/base/: check.h  config.h  logger.cpp  logger.h  raw_ptr.h  waiter.h
src/isolate/: external_data.cpp  external_data.h  inspector_agent.cpp  inspector_agent.h  isolate_holder.cpp  isolate_holder.h  per_isolate_data.cpp  per_isolate_data.h  platform_delegate.cpp  platform_delegate.h  scheduler.cpp  scheduler.h  scheduler_node.cpp  scheduler_node.h  scheduler_self.cpp  scheduler_self.h  script_wrappable.cpp  script_wrappable.h  task.cpp  task.h  wrapper_type_info.cpp  wrapper_type_info.h
src/isolate_handle/: context_handle.cpp  context_handle.h  isolate_handle.cpp  isolate_handle.h
src/lib/: logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
src/module/: async_manager.cpp  async_manager.h  context_handle.cpp  context_handle.h  isolate_handle.cpp  isolate_handle.h  script_handle.cpp  script_handle.h  session_handle.cpp  session_handle.h  snapshot_handle.cpp  snapshot_handle.h  string.h
src/native/: timer_manager.cpp  timer_manager.h
src/net/: request.cpp  request.h  tcp_stream.cpp  tcp_stream.h
src/tool/: tools.cpp  tools.h  utils.cpp  utils.h
src/utils/: script_wrappable.cpp  script_wrappable.h  string.h  utils.h
src/web/: local_dom_window.cpp  local_dom_window.h
test/: create_context.js  eval_async.js  eval_sync.js  inspector.js  log.txt  script_async.js  script_sync.js  test.js  times.js
test/js-env/: .gitignore  README.md  index.js  package-lock.json  package.json  自吐脚本.js
test/js-env/Browser/: BrowserCode.js  WindowEnv.js  WorkerEnv.js
test/js-env/Browser/AnimationTimeline/: AnimationTimeline.js
test/js-env/Browser/BarProp/: BarProp.js
test/js-env/Browser/Blob/: Blob.js
test/js-env/Browser/CSSRuleList/: CSSRuleList.js
test/js-env/Browser/CSSStyleDeclaration/: CSSStyleDeclaration.js
test/js-env/Browser/CacheStorage/: CacheStorage.js
test/js-env/Browser/CanvasRenderingContext2D/: CanvasRenderingContext2D.js
test/js-env/Browser/CredentialsContainer/: CredentialsContainer.js
test/js-env/Browser/Crypto/: Crypto.js
test/js-env/Browser/CustomElementRegistry/: CustomElementRegistry.js
test/js-env/Browser/DOMException/: DOMException.js
test/js-env/Browser/DOMFileSystem/: DOMFileSystem.js
test/js-env/Browser/DOMImplementation/: DOMImplementation.js
test/js-env/Browser/DOMParser/: DOMParser.js
test/js-env/Browser/DOMRectList/: DOMRectList.js
test/js-env/Browser/DOMRectReadOnly/: DOMRectReadOnly.js
test/js-env/Browser/DOMStringList/: DOMStringList.js
test/js-env/Browser/DOMStringMap/: DOMStringMap.js
test/js-env/Browser/DOMTokenList/: DOMTokenList.js
test/js-env/Browser/DeprecatedStorageQuota/: DeprecatedStorageQuota.js
test/js-env/Browser/DeviceMotionEventAcceleration/: DeviceMotionEventAcceleration.js
test/js-env/Browser/DeviceMotionEventRotationRate/: DeviceMotionEventRotationRate.js
test/js-env/Browser/Entry/: Entry.js
test/js-env/Browser/Event/: Event.js
test/js-env/Browser/EventCounts/: EventCounts.js
test/js-env/Browser/EventTarget/: EventTarget.js
test/js-env/Browser/FeaturePolicy/: FeaturePolicy.js
test/js-env/Browser/FileSystemHandle/: FileSystemHandle.js
test/js-env/Browser/FontFace/: FontFace.js
test/js-env/Browser/FragmentDirective/: FragmentDirective.js
test/js-env/Browser/GPU/: GPU.js
test/js-env/Browser/Geolocation/: Geolocation.js
test/js-env/Browser/HTMLAllCollection/: HTMLAllCollection.js
test/js-env/Browser/HTMLCollection/: HTMLCollection.js
test/js-env/Browser/Headers/: Headers.js
test/js-env/Browser/History/: History.js
test/js-env/Browser/IDBFactory/: IDBFactory.js
test/js-env/Browser/Ink/: Ink.js
test/js-env/Browser/Keyboard/: Keyboard.js
test/js-env/Browser/LaunchQueue/: LaunchQueue.js
test/js-env/Browser/Location/: Location.js
test/js-env/Browser/LockManager/: LockManager.js
test/js-env/Browser/MediaCapabilities/: MediaCapabilities.js
test/js-env/Browser/MediaDeviceInfo/: MediaDeviceInfo.js
test/js-env/Browser/MediaSession/: MediaSession.js
test/js-env/Browser/MemoryInfo/: MemoryInfo.js
test/js-env/Browser/MimeType/: MimeType.js
test/js-env/Browser/MimeTypeArray/: MimeTypeArray.js
test/js-env/Browser/MutationObserver/: MutationObserver.js
test/js-env/Browser/NamedNodeMap/: NamedNodeMap.js
test/js-env/Browser/Navigator/: Navigator.js
test/js-env/Browser/NavigatorUAData/: NavigatorUAData.js
test/js-env/Browser/NodeList/: NodeList.js
test/js-env/Browser/PerformanceEntry/: PerformanceEntry.js
test/js-env/Browser/PerformanceNavigation/: PerformanceNavigation.js
test/js-env/Browser/PerformanceServerTiming/: PerformanceServerTiming.js
test/js-env/Browser/PerformanceTiming/: PerformanceTiming.js
test/js-env/Browser/Permissions/: Permissions.js
test/js-env/Browser/Plugin/: Plugin.js
test/js-env/Browser/PluginArray/: PluginArray.js
test/js-env/Browser/Presentation/: Presentation.js
test/js-env/Browser/Promise/: Promise.js
test/js-env/Browser/ReadableStreamDefaultController/: ReadableStreamDefaultController.js
test/js-env/Browser/Request/: Request.js
test/js-env/Browser/Response/: Response.js
test/js-env/Browser/Scheduler/: Scheduler.js
test/js-env/Browser/Scheduling/: Scheduling.js
test/js-env/Browser/SharedStorage/: SharedStorage.js
test/js-env/Browser/SharedStorageWorklet/: SharedStorageWorklet.js
test/js-env/Browser/SpeechSynthesisVoice/: SpeechSynthesisVoice.js
test/js-env/Browser/Storage/: Storage.js
test/js-env/Browser/StorageBucketManager/: StorageBucketManager.js
test/js-env/Browser/StyleMedia/: StyleMedia.js
test/js-env/Browser/StylePropertyMapReadOnly/: StylePropertyMapReadOnly.js
test/js-env/Browser/StyleSheetList/: StyleSheetList.js
test/js-env/Browser/SubtleCrypto/: SubtleCrypto.js
test/js-env/Sites/: rs_药监局.js  worker.js
test/js-env/Tools/: ToolCode.js  fingerprint.js  rsvm.js
(+135 files in other folders)
